<resources>
    <string name="app_name">Simple Vocabulary Trainer</string>
    <string name="select_vocabulary">Select Vocabulary</string>
    <string name="banner_ad_unit_id">ca-app-pub-7188056708851481/7117189654</string>

    <string name="action_settings">Settings</string>
    <string name="create_vocabulary">New</string>
    <string name="import_vocabulary">Import</string>
    <string name="export_vocabulary">Export</string>
    <string name="str_confirm_delete_vocabulary">Delete vocabulary </string>
    <string name="title_activity_vocabulary_visualization">Vocabulary Visualization</string>
    <string name="test_native">Native</string>
    <string name="test_foreign">Foreign</string>

    <!-- Pantalla principal del vocabulario -->
    <string name="change_vocabulary">Change</string>
    <string name="str_add_word">Add word</string>
    <string name="str_edit_word">Edit word</string>
    <string name="str_stats">Stats</string>
    <string name="str_filter">Filter&#8230;</string>
    <string name="str_test">Test Native</string>
    <string name="str_test_foreign">Test Foreign</string>
    <string name="str_encoding">Encoding</string>

    <string name="str_confirm_delete">Delete word </string>
    <string name="str_confirm_reset">Reset statistics?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_removed_word">Word has been removed</string>
    <string name="str_word_native">Word / Phrase</string>
    <string name="str_part_of_speech">Part of speech:</string>
    <string name="str_notes">Notes</string>
    <string name="str_word_foreign">Translation:</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="title_activity_word_edition">Add / Edit Word</string>

    <string name="title_activity_vocabulary_test">Test Vocabulary</string>
    <string name="strTranslation">Translation:</string>
    <string name="str_correct_answer">Correct Answer:</string>
    <string name="str_next">Next</string>
    <string name="str_end">End test</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="str_words_learnt">Words Learnt:</string>
    <string name="str_words_total">Total Words:</string>
    <string name="str_progress">Progress:</string>
    <string name="str_questions_answered">Questions Answered:</string>
    <string name="str_questions_attempted">Questions Attempted:</string>
    <string name="str_success_rate">Success Rate:</string>
    <string name="str_reset">Reset</string>
    <string name="str_back">Back</string>
    <string name="str_enter_vocabulary_name">Enter vocabulary name:</string>
    <string name="str_open">Open</string>
    <string name="str_delete_vocabulary">Delete</string>
    <string name="str_delete">Delete</string>
    <string name="str_learnt">Learnt</string>
    <string name="str_vocabulary_complete">Vocabulary completed!</string>
    <string name="str_empty">(empty)</string>
    <string name="str_correct">CORRECT!</string>
    <string name="str_fail">FAIL!</string>
    <string name="str_select_file">Select your file manager</string>
    <string name="str_select_path">Select your file manager</string>
    <string name="str_install_filemanager">You need to install a File Manager to browse for files.</string>
    <string name="str_error_exporting">Error exporting </string>
    <string name="str_error_importing">Error importing </string>
    <string name="str_expanding">Expanding predefined vocabulary: </string>
    <string name="str_predefined">Preloaded</string>
    <string name="str_exporting">Exporting to: </string>
    <string name="str_finished_exporting">Finished export of </string>
    <string name="str_progress_importing">Importing </string>
    <string name="str_progress_exporting">Exporting </string>
</resources>
