<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/mycolors_app_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VocabularySelection">

    <!--android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@attr/actionBarSize"
        android:background="@color/mycolors_app_background"
        android:titleTextAppearance="@color/mycolors_text"
        android:title="@string/select_vocabulary"
        /-->

    <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
    <TextView
        android:id="@+id/tvTitle"
        style="@style/myapp_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/separacion"
        android:gravity="center_horizontal"
        android:text="@string/select_vocabulary"
        android:textStyle="bold" />
    <!--style="@style/Base.TextAppearance.AppCompat.Title"-->
    <!--android:textColor="@color/mycolors_text"-->

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RadioGroup
            android:id="@+id/rbVocabularySelection"
            style="@style/mystyles_TextoGrande"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"></RadioGroup>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOpenVocabulary"
            style="@style/myapp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="@dimen/separacion"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_open_in_browser_white_24dp"
            android:text="@string/str_open" />

        <Button
            android:id="@+id/btnCreateVocabulary"
            style="@style/myapp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="@dimen/separacion"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_folder_plus_white_24dp"
            android:text="@string/create_vocabulary" />

        <Button
            android:id="@+id/btnDeleteVocabulary"
            style="@style/myapp_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="@dimen/separacion"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_delete_white_24dp"
            android:src="@drawable/ic_delete_white_24dp"
            android:text="@string/str_delete_vocabulary"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnImportVocabulary"
            style="@style/myapp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/separacion"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_file_upload_white_24dp"
            android:text="@string/import_vocabulary" />

        <Button
            android:id="@+id/btnExportVocabulary"
            style="@style/myapp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/separacion"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_file_download_white_24dp"
            android:text="@string/export_vocabulary" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>
